[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["K"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
